--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "bootstrap": "^5.3.0",
     "chart.js": "^2.9.3",
     "react": "^16.13.1",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-tippy": "^1.4.0",
+    "react-tooltip": "^5.20.0",
+    "recharts": "^2.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
